--- a/WcfServiceLibrary1/WcfServiceLibrary1/bin/WcfServiceLibrary1.dll.config
+++ b/WcfServiceLibrary1/WcfServiceLibrary1/bin/WcfServiceLibrary1.dll.config
@@ -20,8 +20,12 @@
   <!-- Во время развертывания проекта библиотеки служб содержимое файла конфигурации необходимо добавить к файлу 
   app.config на узле. Файлы конфигурации для библиотек не поддерживаются System.Configuration. -->
   <system.serviceModel>
-    <services>
-      
+    <bindings>
+        <basicHttpBinding>
+            <binding maxReceivedMessageSize="70000000" receiveTimeout="00:40:00" sendTimeout="00:40:00" />
+        </basicHttpBinding>
+    </bindings>  
+    <services>      
       <service name="WcfServiceLibrary1.Manufacturer">
         <endpoint address="" binding="basicHttpBinding" contract="WcfServiceLibrary1.SManufacturer">
           <identity>
@@ -146,8 +150,8 @@
             <add baseAddress="http://localhost:8733/Design_Time_Addresses/WcfServiceLibrary1/Motherboard/" />
           </baseAddresses>
         </host>
-      </service>
-
+      </service>      
+        
       <service name="WcfServiceLibrary1.Computer">
         <endpoint address="" binding="basicHttpBinding" contract="WcfServiceLibrary1.SComputer">
           <identity>
@@ -175,6 +179,6 @@
           <serviceDebug includeExceptionDetailInFaults="False" />
         </behavior>
       </serviceBehaviors>
-    </behaviors>
+    </behaviors>      
   </system.serviceModel>
 </configuration>
